--- a/index.html
+++ b/index.html
@@ -41,25 +41,6 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="index.html">ADAMS</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li class="dropdown">
-                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Download<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Release</a></li>
-                  <li><a href="/snapshots/adams/">Snapshot</a></li>
-                </ul>
-              </li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email">
-              <input class="span2" type="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
-            </form>
-          </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
@@ -68,9 +49,11 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+        <div style="float: left; width: 64px; height: 64px; "><img src="img/logo.png" height="64" width="64"/></div>
+        <h1>Welcome to ADAMS!</h1>
+        <br/>
+        <p>The Advanced Data mining And Machine learning System (ADAMS) is a novel, flexible workflow engine aimed at quickly building and maintaining real-world, complex knowledge workflows.</p>
+        <p><a class="btn btn-primary btn-large" href="/elgg/pages/view/90/about-adams">Learn more &raquo;</a></p>
       </div>
 
       <!-- Example row of columns -->
@@ -95,7 +78,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; 2012 University of Waikato, Hamilton, NZ</p>
       </footer>
 
     </div> <!-- /container -->
