--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
+      <div class="hero-unit" style="padding: 16px; ">
         <div style="float: left; width: 64px; height: 64px; "><img src="img/logo.png" height="64" width="64"/></div>
         <h1>Welcome to ADAMS!</h1>
         <br/>
@@ -56,22 +56,63 @@
         <p><a class="btn btn-primary btn-large" href="/elgg/pages/view/90/about-adams">Learn more &raquo;</a></p>
       </div>
 
-      <!-- Example row of columns -->
       <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+        <div class="span1">
+          <p>&nbsp;</p>
         </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
+          <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/download.png" width="48" height="48"/> <b>Download</b></a></p>
+          <p>
+            <ul>
+              <li><a href="/elgg/pages/view/97/releases">Release</a> (stable)</li>
+              <li><a href="/elgg/pages/view/98/snapshot">Snapshot</a> (bleeding edge functionality, latest bugfixes)</li>
+            </ul>
+          </p>
+        </div>
+        <div class="span2">
+          <p>&nbsp;</p>
+        </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/question.png" width="48" height="48"/> <b>Get help</b></a></p>
+          <p>
+            <ul>
+              <li>Users</li>
+              <li>Developers</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span1">
+          <p>&nbsp;</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span1">
+          <p>&nbsp;</p>
+        </div>
+        <div class="span4">
+          <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/development.png" width="48" height="48"/> <b>Get involved</b></a></p>
+          <p>
+            <ul>
+              <li>Developers</li>
+              <li>Writers</li>
+              <li><a href="/bugs/">Bug reports</a></li>
+            </ul>
+          </p>
+        </div>
+        <div class="span2">
+          <p>&nbsp;</p>
+        </div>
+        <div class="span4">
+          <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/info.png" width="48" height="48"/> <b>About</b></a></p>
+          <p>
+            <ul>
+              <li><a href="/elgg/pages/view/90/about-adams">What is ADAMS?</a></li>
+              <li><a href="/elgg/pages/view/91/features">Features</a></li>
+              <li><a href="/elgg/pages/view/99/publications">Publications</a></li>
+            </ul>
+          </p>
         </div>
       </div>
 
