updated start page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/download.png" width="48" height="48"/> <b>Download</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/pages/view/97/releases">Release</a> (stable)</li>
-              <li><a href="/elgg/pages/view/98/snapshot">Snapshot</a> (bleeding edge functionality, latest bugfixes)</li>
+              <li><a href="/elgg/pages/view/97/releases">Release</a> - if you want a stable application</li>
+              <li><a href="/elgg/pages/view/98/snapshot">Snapshot</a> - for bleeding edge functionality and latest bugfixes</li>
             </ul>
           </p>
         </div>
@@ -76,8 +76,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/question.png" width="48" height="48"/> <b>Get help</b></a></p>
           <p>
             <ul>
-              <li>Users</li>
-              <li>Developers</li>
+              <li><a href="/elgg/groups/profile/146/users">Users</a> - stuck creating a flow?</li>
+              <li><a href="/elgg/groups/profile/147/developers">Developers</a> - need to create a new actor or embed a flow?</li>
             </ul>
           </p>
         </div>
@@ -95,9 +95,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/development.png" width="48" height="48"/> <b>Get involved</b></a></p>
           <p>
             <ul>
-              <li>Developers</li>
-              <li>Writers</li>
-              <li><a href="/bugs/">Bug reports</a></li>
+              <li><a href="/elgg/groups/profile/147/developers">Developers and Writers</a> - you would like to share a new actor or additional documentation?</li>
+              <li><a href="/bugs/">Bug reports</a> - if you spotted one, please report it!</li>
             </ul>
           </p>
         </div>
@@ -109,8 +108,8 @@
           <p>
             <ul>
               <li><a href="/elgg/pages/view/90/about-adams">What is ADAMS?</a></li>
-              <li><a href="/elgg/pages/view/91/features">Features</a></li>
-              <li><a href="/elgg/pages/view/99/publications">Publications</a></li>
+              <li><a href="/elgg/pages/view/91/features">Features</a> or what ADAMS can do</li>
+              <li><a href="/elgg/pages/view/99/publications">Publications</a> that use ADAMS</li>
             </ul>
           </p>
         </div>
