--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html">ADAMS</a>
+          <a class="brand">ADAMS <small>- a different take on workflows</small></a>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
         <h1>Welcome to ADAMS!</h1>
         <br/>
         <p>The Advanced Data mining And Machine learning System (ADAMS) is a novel, flexible workflow engine aimed at quickly building and maintaining real-world, complex knowledge workflows.</p>
-        <p><a class="btn btn-primary btn-large" href="/elgg/pages/view/90/about-adams">Learn more &raquo;</a></p>
+        <!--p><a class="btn btn-primary btn-large" href="/elgg/pages/view/90/about-adams">Learn more &raquo;</a></p-->
       </div>
 
       <div class="row">
