updated icons/start page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <p>
             <ul>
               <li><a href="/elgg/groups/profile/146/users">Users</a> - stuck creating a flow?</li>
-              <li><a href="/elgg/groups/profile/147/developers">Developers</a> - need to create a new actor or embed a flow?</li>
+              <li><a href="/elgg/groups/profile/147/developers">Developers</a> - creating a new actor or embedding one?</li>
+              <li><a href="/elgg/pages/view/150/consulting">Consulting</a> - do you need data mining experts?</li>
             </ul>
           </p>
         </div>
