--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/development.png" width="48" height="48"/> <b>Get involved</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/groups/profile/147/developers">Developers and Writers</a> - you would like to share a new actor or additional documentation?</li>
-              <li><a href="/bugs/">Bug reports</a> - if you spotted one, please report it!</li>
+              <li><a href="/elgg/groups/profile/147/developers">Developers and Writers</a> - you want to share a new actor or documentation?</li>
+              <li><a href="/bugs/">Bugs</a> - if you spot one, report it!</li>
             </ul>
           </p>
         </div>
