polished About section

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
           <p>
             <ul>
               <li><a href="/elgg/pages/view/90/about-adams">What is ADAMS?</a></li>
-              <li><a href="/elgg/pages/view/91/features">Features</a> or what ADAMS can do</li>
-              <li><a href="/elgg/pages/view/99/publications">Publications</a> that use ADAMS</li>
+              <li><a href="/elgg/pages/view/91/features">Features</a> of ADAMS</li>
+              <li><a href="/elgg/pages/view/99/publications">Publications</a> in which ADAMS was used</li>
             </ul>
           </p>
         </div>
