--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <ul>
               <li><a href="/elgg/groups/profile/146/users">Users</a> - stuck creating a flow?</li>
               <li><a href="/elgg/groups/profile/147/developers">Developers</a> - creating a new actor or embedding one?</li>
+              <li><a href="/elgg/pages/view/178/consulting">Consulting</a> - do you need data mining experts?</li>
             </ul>
           </p>
         </div>
