--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2012 University of Waikato, Hamilton, NZ</p>
+        <p style="text-align: center; ">&copy; 2012 University of Waikato, Hamilton, NZ - <a href="https://twitter.com/TheAdamsFlow" target="_blank">Follow us on Twitter <img src="img/twitter.jpg" width="16" height="16"/></a></p>
       </footer>
 
     </div> <!-- /container -->
