updated links for downloads, due to changes in elgg

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/download.png" width="48" height="48"/> <b>Download</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/pages/view/199/releases">Release</a> - if you want a stable application</li>
-              <li><a href="/elgg/pages/view/200/snapshot">Snapshot</a> - for bleeding edge functionality and latest bugfixes</li>
+              <li><a href="/elgg/pages/view/198/downloads">Release</a> - if you want a stable version</li>
+              <li><a href="/snapshots/adams/">Snapshot</a> - for bleeding edge functionality and latest bugfixes</li>
             </ul>
           </p>
         </div>
