--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/download.png" width="48" height="48"/> <b>Download</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/pages/view/198/downloads">Release</a> - if you want a stable version</li>
-              <li><a href="/snapshots/adams/">Snapshot</a> - for bleeding edge functionality and latest bugfixes</li>
+              <li><a href="/elgg/pages/view/198/downloads">Release</a>: if you want a stable version</li>
+              <li><a href="/snapshots/adams/">Snapshot</a>: for bleeding edge functionality and latest bugfixes</li>
             </ul>
           </p>
         </div>
@@ -76,9 +76,9 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/question.png" width="48" height="48"/> <b>Get help</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/groups/profile/146/users">Users</a> - stuck creating a flow?</li>
-              <li><a href="/elgg/groups/profile/147/developers">Developers</a> - creating a new actor or embedding one?</li>
-              <li><a href="/elgg/pages/view/178/consulting">Consulting</a> - do you need data mining experts?</li>
+              <li><a href="/elgg/groups/profile/146/users">Users</a>: <a href="/elgg/pages/view/148/getting-started">Getting started</a>, <a href="/elgg/pages/view/201/examples">Examples</a></li>
+              <li><a href="/elgg/groups/profile/147/developers">Developers</a>: <a href="/elgg/pages/view/149/getting-started">Getting started</a>, <a href="/elgg/pages/view/151/source-code">Source code</a></li>
+              <li><a href="/elgg/pages/view/178/consulting">Consulting</a>: do you need data mining experts?</li>
             </ul>
           </p>
         </div>
@@ -96,8 +96,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/development.png" width="48" height="48"/> <b>Get involved</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/groups/profile/147/developers">Developers and Writers</a> - you want to share a new actor or documentation?</li>
-              <li><a href="/bugs/">Bugs</a> - if you spot one, report it!</li>
+              <li><a href="/elgg/groups/profile/147/developers">Developers and Writers</a>: you want to share code or documentation?</li>
+              <li><a href="/bugs/">Bugs</a>: if you spot one, report it!</li>
             </ul>
           </p>
         </div>
