--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Welcome to ADAMS!</h1>
         <br/>
         <p>The Advanced Data mining And Machine learning System (ADAMS) is a novel, flexible workflow engine aimed at quickly building and maintaining real-world, complex knowledge workflows.</p>
-        <!--p><a class="btn btn-primary btn-large" href="/elgg/pages/view/179/about-adams">Learn more &raquo;</a></p-->
+        <!--p><a class="btn btn-primary btn-large" href="/about">Learn more &raquo;</a></p-->
       </div>
 
       <div class="row">
@@ -64,7 +64,7 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/download.png" width="48" height="48"/> <b>Download</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/pages/view/198/downloads">Release</a>: if you want a stable version</li>
+              <li><a href="/downloads">Release</a>: if you want a stable version</li>
               <li><a href="/snapshots/adams/">Snapshot</a>: for bleeding edge functionality and latest bugfixes</li>
             </ul>
           </p>
@@ -76,9 +76,9 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/question.png" width="48" height="48"/> <b>Get help</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/groups/profile/146/users">Users</a>: <a href="/elgg/pages/view/148/getting-started">Getting started</a>, <a href="/elgg/pages/view/201/examples">Examples</a></li>
-              <li><a href="/elgg/groups/profile/147/developers">Developers</a>: <a href="/elgg/pages/view/149/getting-started">Getting started</a>, <a href="/elgg/pages/view/151/source-code">Source code</a></li>
-              <li><a href="/elgg/pages/view/178/consulting">Consulting</a>: do you need data mining experts?</li>
+              <li><a href="/users">Users</a>: <a href="/getting-started">Getting started</a>, <a href="/examples">Examples</a>, <a href="/documentation">Docs</a></li>
+              <li><a href="/developers">Developers</a>: <a href="/getting-started-dev">Getting started</a>, <a href="/source">Source</a>, <a href="/documentation">Docs</a></li>
+              <li><a href="/consulting">Consulting</a>: do you need data mining experts?</li>
             </ul>
           </p>
         </div>
@@ -96,7 +96,7 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/development.png" width="48" height="48"/> <b>Get involved</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/groups/profile/147/developers">Developers and Writers</a>: you want to share code or documentation?</li>
+              <li><a href="/developers">Developers and Writers</a>: you want to share code or documentation?</li>
               <li><a href="/bugs/">Bugs</a>: if you spot one, report it!</li>
             </ul>
           </p>
@@ -108,9 +108,9 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/info.png" width="48" height="48"/> <b>About</b></a></p>
           <p>
             <ul>
-              <li><a href="/elgg/pages/view/179/about-adams">What is ADAMS?</a></li>
-              <li><a href="/elgg/pages/view/181/features">Features</a> of ADAMS</li>
-              <li><a href="/elgg/pages/view/182/publications">Publications</a> in which ADAMS was used</li>
+              <li><a href="/about">What is ADAMS?</a></li>
+              <li><a href="/features">Features</a> of ADAMS</li>
+              <li><a href="/publications">Publications</a> in which ADAMS was used</li>
             </ul>
           </p>
         </div>
