updated footer: added youtube, broken into two lines; added explicit "Forums" links

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <p><a class="btn" style="font-size: 180%; width: 100%; text-align: left; "><img src="img/question.png" width="48" height="48"/> <b>Get help</b></a></p>
           <p>
             <ul>
-              <li><a href="/users">Users</a>: <a href="/getting-started">Getting started</a>, <a href="/examples">Examples</a>, <a href="/documentation">Docs</a></li>
-              <li><a href="/developers">Developers</a>: <a href="/getting-started-dev">Getting started</a>, <a href="/source">Source</a>, <a href="/documentation">Docs</a></li>
+              <li>Users: <a href="/getting-started">Getting started</a>, <a href="/examples">Examples</a>, <a href="/documentation">Docs</a>, <a href="/users">Forum</a></li>
+              <li>Developers: <a href="/getting-started-dev">Getting started</a>, <a href="/source">Source code</a>, <a href="/developers">Forum</a></li>
               <li><a href="/consulting">Consulting</a>: do you need data mining experts?</li>
             </ul>
           </p>
@@ -119,7 +119,8 @@
       <hr>
 
       <footer>
-        <p style="text-align: center; ">&copy; 2012 University of Waikato, Hamilton, NZ - <a href="https://twitter.com/TheAdamsFlow" target="_blank">Follow us on Twitter <img src="img/twitter.jpg" width="16" height="16"/></a></p>
+        <p style="text-align: center; "><a href="https://twitter.com/TheAdamsFlow" target="_blank">Follow us on Twitter <img src="img/twitter.jpg" width="20" height="20"/></a> or <a href="http://www.youtube.com/user/TheAdamsWorkflow" target="_blank">watch videos on YouTube <img src="img/youtube.png" width="49" height="20"/></a></p>
+        <p style="text-align: center; ">&copy; 2012 <a href="http://www.waikato.ac.nz/">University of Waikato</a>, Hamilton, NZ</p>
       </footer>
 
     </div> <!-- /container -->
