added screenshots link

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <ul>
               <li><a href="/about">What is ADAMS?</a></li>
               <li><a href="/features">Features</a> of ADAMS</li>
+              <li><a href="/screenshots">Screenshots</a></li>
               <li><a href="/publications">Publications</a> in which ADAMS was used</li>
             </ul>
           </p>
