added shortcut to downloads of current release

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <h1>Welcome to ADAMS!</h1>
         <br/>
         <p>The Advanced Data mining And Machine learning System (ADAMS) is a novel, flexible workflow engine aimed at quickly building and maintaining real-world, complex knowledge workflows.</p>
+        <p>Current version: <a href="https://sourceforge.net/projects/theadamsflow/files/0.4.0/" target="_blank">0.4.0</a> (October 2, 2012)</p>
         <!--p><a class="btn btn-primary btn-large" href="/about">Learn more &raquo;</a></p-->
       </div>
 
