--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div style="float: left; width: 64px; height: 64px; "><img src="img/logo.png" height="64" width="64"/></div>
         <h1>Welcome to ADAMS!</h1>
         <br/>
-        <p>The Advanced Data mining And Machine learning System (ADAMS) is a novel, flexible workflow engine aimed at quickly building and maintaining real-world, complex knowledge workflows.</p>
+        <p>The Advanced Data mining And Machine learning System (ADAMS) is a novel, flexible workflow engine aimed at quickly building and maintaining real-world, complex knowledge workflows, released under <a href="http://www.gnu.org/licenses/gpl-3.0.txt" target="_blank">GPLv3</a>.</p>
         <p>Current version: <a href="https://sourceforge.net/projects/theadamsflow/files/0.4.1/" target="_blank">0.4.1</a> (December 20, 2012)</p>
         <!--p><a class="btn btn-primary btn-large" href="/about">Learn more &raquo;</a></p-->
       </div>
