--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <footer>
         <p style="text-align: center; "><a href="https://twitter.com/TheAdamsFlow" target="_blank">Follow us on Twitter <img src="img/twitter.jpg" width="20" height="20"/></a> or <a href="http://www.youtube.com/user/TheAdamsWorkflow" target="_blank">watch videos on YouTube <img src="img/youtube.png" width="49" height="20"/></a></p>
-        <p style="text-align: center; ">&copy; 2012 <a href="http://www.waikato.ac.nz/">University of Waikato</a>, Hamilton, NZ</p>
+        <p style="text-align: center; ">&copy; 2012-2013 <a href="http://www.waikato.ac.nz/">University of Waikato</a>, Hamilton, NZ</p>
         <p align="center"><script type="text/javascript" src="http://www.ohloh.net/p/616433/widgets/project_thin_badge.js"></script></p>
       </footer>
 
