--- a/release.html
+++ b/release.html
@@ -41,15 +41,44 @@
       <a href="http://sf.net/projects/theadamsflow/files/" target="_blank">Sourceforge.net</a>.</p>
 
       <div class="panel-group" id="accordion">
+        <!-- X.Y.Z -->
+        <!--div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-X-Y-Z">
+                x.y.z<small> - released 20XX-YY-ZZ</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-X-Y-Z" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li><strong>base</strong>
+                  <ul>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-flows.jar/download" target="_blank">flows</a></li>
+                  </ul>
+                </li>
+                <li><strong>base + addons</strong>
+                  <ul>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-flows.jar/download" target="_blank">flows</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div-->
+        <!-- 0.4.5 -->
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-5">
                 0.4.5<small> - released 2014-05-16</small>
               </a>
             </h4>
           </div>
-          <div id="collapseOne" class="panel-collapse collapse in">
+          <div id="collapse-0-4-5" class="panel-collapse collapse">
             <div class="panel-body">
               <ul>
                 <li><strong>base</strong>
@@ -68,15 +97,16 @@
             </div>
           </div>
         </div>
+        <!-- 0.4.4 -->
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-4">
                 0.4.4<small> - released 2013-10-25</small>
               </a>
             </h4>
           </div>
-          <div id="collapseTwo" class="panel-collapse collapse">
+          <div id="collapse-0-4-4" class="panel-collapse collapse">
             <div class="panel-body">
               <ul>
                 <li><strong>base</strong>
@@ -95,18 +125,74 @@
             </div>
           </div>
         </div>
+        <!-- 0.4.3 -->
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-3">
                 0.4.3<small> - released 2013-06-10</small>
               </a>
             </h4>
           </div>
-          <div id="collapseThree" class="panel-collapse collapse">
+          <div id="collapse-0-4-3" class="panel-collapse collapse">
             <div class="panel-body">
               <ul>
-                <li>all</li>
+                <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.3/adams-all-0.4.3-bin.zip/download" target="_blank">zip</a></li>
+                <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.3/adams-all-0.4.3-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.3/adams-all-0.4.3-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.3/adams-all-0.4.3-flows.jar/download" target="_blank">flows</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- 0.4.2 -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-2">
+                0.4.2<small> - released 2013-02-26</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-0-4-2" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.2/adams-all-0.4.2-bin.zip/download" target="_blank">zip</a></li>
+                <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.2/adams-all-0.4.2-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.2/adams-all-0.4.2-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.2/adams-all-0.4.2-flows.jar/download" target="_blank">flows</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- 0.4.1 -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-1">
+                0.4.1<small> - released 2012-12-20</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-0-4-1" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.1/adams-all-0.4.1-bin.zip/download" target="_blank">zip</a></li>
+                <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.1/adams-all-0.4.1-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.1/adams-all-0.4.1-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.1/adams-all-0.4.1-flows.jar/download" target="_blank">flows</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- 0.4.0 -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-0">
+                0.4.0<small> - released 2012-09-28</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-0-4-0" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.0/adams-all-0.4.0-bin.zip/download" target="_blank">zip</a></li>
+                <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.0/adams-all-0.4.0-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.0/adams-all-0.4.0-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.0/adams-all-0.4.0-flows.jar/download" target="_blank">flows</a></li>
               </ul>
             </div>
           </div>
