--- a/index.html
+++ b/index.html
@@ -49,22 +49,24 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
+        <!-- About -->
         <div class="col-md-4">
           <h2>About</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="http://getbootstrap.com/examples/jumbotron/#" role="button">View details »</a></p>
+          <p><a class="btn btn-default" href="features.html" role="button">Features »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="screenshots.html" role="button">Screenshots »</a></p>
         </div>
+        <!-- Download -->
         <div class="col-md-4">
           <h2>Download</h2>
           <p>ADAMS is written in Java and runs on any platform that supports Java 1.7. You can either download a <strong>release</strong> (usually considered stable) or a <strong>snapshot</strong> (if you want to get the latest updates).</p>
           <p><a class="btn btn-default" href="release.html" role="button">Release »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="snapshot.html" role="button">Snapshot »</a></p>
-       </div>
+        </div>
+        <!-- Get started -->
         <div class="col-md-4">
           <h2>Get started</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="http://getbootstrap.com/examples/jumbotron/#" role="button">View details »</a></p>
+          <p><a class="btn btn-default" href="user_start.html" role="button">User »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="dev_start.html" role="button">Developer »</a></p>
         </div>
       </div>
 
