added visualizatio/web feature

--- a/features.html
+++ b/features.html
@@ -41,48 +41,56 @@
 
       <table class="table table-striped">
         <thead>
-        <tr>
-        <th>Feature</th>
-        <th>Available</th>
-        </tr>
+          <tr>
+            <th>Feature</th>
+            <th>Available</th>
+          </tr>
         </thead>
         <tbody>
-        <tr>
-        <td>Machine learning/data mining</td>
-        <td>WEKA, WEKA webservice, MOA, parameter optimization, experiment generation on-the-fly, setup generators, time series</td>
-        </tr>
-        <tr>
-        <td>Data processing</td>
-        <td>WEKA, R-Project, XML, XSLT, XPath, HTML, JSON</td>
-        </tr>
-        <tr>
-        <td>Streaming</td>
-        <td>MOA, Twitter (record/replay)</td>
-        </tr>
-        <tr>
-        <td>Spreadsheets</td>
-        <td>MS Excel (r/w), ODF (r/w), CSV (r/w), Gnumeric (r/w)</td>
-        </tr>
-        <tr>
-        <td>Graphics output</td>
-        <td>BMP, JPG, PNG, TIF, PDF</td>
-        </tr>
-        <tr>
-        <td>Imaging</td>
-        <td>ImageJ, JAI, ImageMagick, Gnuplot</td>
-        </tr>
-        <tr>
-        <td>Scripting</td>
-        <td>Groovy, Jython</td>
-        </tr>
-        <tr>
-        <td>Documentation</td>
-        <td>DocBook, HTML</td>
-        </tr>
-        <tr>
-        <td>Other</td>
-        <td>HTTP, FTP, SFTP, SSH, Email, Webservices, GIS, OpenStreetMap, de/-compression (tar, zip, bzip2, gzip, lzma), Java code generation</td>
-        </tr>
+          <tr>
+            <td>Machine learning/data mining</td>
+            <td>WEKA, WEKA webservice, MOA, parameter optimization, experiment generation on-the-fly, setup generators, time series</td>
+          </tr>
+          <tr>
+            <td>Data processing</td>
+            <td>WEKA, R-Project, XML, XSLT, XPath, HTML, JSON</td>
+          </tr>
+          <tr>
+            <td>Streaming</td>
+            <td>MOA, Twitter (record/replay)</td>
+          </tr>
+          <tr>
+            <td>Spreadsheets</td>
+            <td>MS Excel (r/w), ODF (r/w), CSV (r/w), Gnumeric (r/w)</td>
+          </tr>
+          <tr>
+            <td>Imaging</td>
+            <td>ImageJ, JAI, ImageMagick, Gnuplot</td>
+          </tr>
+          <tr>
+            <td>Graphics output</td>
+            <td>BMP, JPG, PNG, TIF, PDF</td>
+          </tr>
+          <tr>
+            <td>Visualization</td>
+            <td>Scatter and line plots, Images, GIS (OpenStreetMap)</td>
+          </tr>
+          <tr>
+            <td>Scripting</td>
+            <td>Groovy, Jython</td>
+          </tr>
+          <tr>
+            <td>Documentation</td>
+            <td>DocBook, HTML</td>
+          </tr>
+          <tr>
+            <td>Web</td>
+            <td>HTTP, FTP, SFTP, SSH, Email, Webservices</td>
+          </tr>
+          <tr>
+            <td>Other</td>
+            <td>de/-compression (tar, zip, bzip2, gzip, lzma), Java code generation</td>
+          </tr>
         </tbody>
       </table>
 
