--- a/navbar.html
+++ b/navbar.html
@@ -21,7 +21,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="user_start.html">Getting started</a></li>
+                <li><a href="user_start.html">Get started</a></li>
                 <li><a href="user_examples.html">Examples</a></li>
                 <li><a href="user_forum.html">Forum</a></li>
               </ul>
@@ -29,8 +29,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Developers<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="dev_start.html">Getting started</a></li>
-                <li><a href="source.html">Source code</a></li>
+                <li><a href="dev_start.html">Get started</a></li>
                 <li><a href="/bugs/">Bugs</a></li>
                 <li><a href="dev_forum.html">Forum</a></li>
               </ul>
