--- a/features.html
+++ b/features.html
@@ -49,7 +49,7 @@
         <tbody>
           <tr>
             <td>Machine learning/data mining</td>
-            <td>WEKA, WEKA webservice, MOA, parameter optimization, experiment generation on-the-fly, setup generators, time series</td>
+            <td>WEKA, WEKA webservice, MOA, MEKA, parameter optimization, experiment generation on-the-fly, setup generators, time series</td>
           </tr>
           <tr>
             <td>Data processing</td>
