--- a/dev_start.html
+++ b/dev_start.html
@@ -37,8 +37,9 @@
         <h1>Get started (Developer)</h1>
       </div>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer">
+      </div>
+      <script>$("#footer").load("footer.html");</script>
     </div> <!-- /container -->
 
 
