--- a/release.html
+++ b/release.html
@@ -207,8 +207,9 @@
       </ul>
       <p><strong>Mac users</strong> using the app archive need to tell ADAMS where to find the example flows (see above for download).  The <strong>Placeholders.props</strong> file needs to be <a href="/resources/Placeholders.props" target="_blank">downloaded</a> to <code>$HOME/.adams</code> and the <code>EXAMPLE_FLOWS</code> directory in the props file pointed to the actual directory with the example flows.</p>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer">
+      </div>
+      <script>$("#footer").load("footer.html");</script>
     </div> <!-- /container -->
 
 
