--- a/snapshot.html
+++ b/snapshot.html
@@ -42,8 +42,9 @@
       <span id="snapshotimport"></span>
       <script>$("#snapshopimport").load("/snapshots/adams/index.html");</script>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer">
+      </div>
+      <script>$("#footer").load("footer.html");</script>
     </div> <!-- /container -->
 
 
