--- a/features.html
+++ b/features.html
@@ -49,23 +49,23 @@
         <tbody>
           <tr>
             <td>Machine learning/data mining</td>
-            <td>WEKA, WEKA webservice, MOA, MEKA, parameter optimization, experiment generation on-the-fly, setup generators, time series</td>
+            <td><a href="http://www.cs.waikato.ac.nz/ml/weka/" target="_blank">WEKA</a>, WEKA webservice, <a href="http://moa.cms.waikato.ac.nz/" target="_blank">MOA</a>, <a href="http://meka.sourceforge.net/" target="_blank">MEKA</a>, parameter optimization, experiment generation on-the-fly, setup generators, time series</td>
           </tr>
           <tr>
             <td>Data processing</td>
-            <td>WEKA, R-Project, XML, XSLT, XPath, HTML, JSON</td>
+            <td><a href="http://www.cs.waikato.ac.nz/ml/weka/" target="_blank">WEKA</a>, <a href="http://www.r-project.org/" target="_blank">R-Project</a>, XML, XSLT, XPath, HTML, JSON</td>
           </tr>
           <tr>
             <td>Streaming</td>
-            <td>MOA, Twitter (record/replay)</td>
+            <td><a href="http://moa.cms.waikato.ac.nz/" target="_blank">MOA</a>, Twitter (record/replay)</td>
           </tr>
           <tr>
             <td>Spreadsheets</td>
-            <td>MS Excel (r/w), ODF (r/w), CSV (r/w), Gnumeric (r/w)</td>
+            <td>MS Excel (r/w), <a href="http://en.wikipedia.org/wiki/OpenDocument" target="_blank">ODF</a> (r/w), CSV (r/w), <a href="http://www.gnumeric.org/" target="_blank">Gnumeric</a> (r/w)</td>
           </tr>
           <tr>
             <td>Imaging</td>
-            <td>ImageJ, JAI, ImageMagick, Gnuplot</td>
+            <td><a href="http://imagej.nih.gov/ij/" target="_blank">ImageJ</a>, <a href="http://en.wikipedia.org/wiki/Java_Advanced_Imaging" target="_blank">JAI</a>, <a href="" target="_blank">ImageMagick</a>, <a href="http://gnuplot.info/" target="_blank">Gnuplot</a></td>
           </tr>
           <tr>
             <td>Graphics output</td>
@@ -73,19 +73,19 @@
           </tr>
           <tr>
             <td>Visualization</td>
-            <td>Scatter and line plots, Images, GIS (OpenStreetMap)</td>
+            <td>Scatter and line plots, Images, GIS (<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a>)</td>
           </tr>
           <tr>
             <td>Scripting</td>
-            <td>Groovy, Jython</td>
+            <td><a href="http://groovy.codehaus.org/" target="_blank">Groovy</a>, <a href="http://jython.org/" target="_blank">Jython</a></td>
           </tr>
           <tr>
             <td>Documentation</td>
-            <td>DocBook, HTML</td>
+            <td><a href="http://www.docbook.org/" target="_blank">DocBook</a>, HTML</td>
           </tr>
           <tr>
             <td>Web</td>
-            <td>HTTP, FTP, SFTP, SSH, Email, Webservices</td>
+            <td>HTTP, FTP, SFTP, SSH, Email, <a href="http://cxf.apache.org/" target="_blank">Webservices</a></td>
           </tr>
           <tr>
             <td>Other</td>
@@ -94,8 +94,9 @@
         </tbody>
       </table>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer">
+      </div>
+      <script>$("#footer").load("footer.html");</script>
     </div> <!-- /container -->
 
 
