--- a/index.html
+++ b/index.html
@@ -53,25 +53,26 @@
         <!-- About -->
         <div class="col-md-4">
           <h2>About</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>ADAMS offers a wide range of operators (called <em>actors</em>) that perform retrieval, processsing, mining and visualization of data. Instead of placing actors on a canvas and connecting them manually, actors connect implicitly in a tree structure instead.</p>
           <p><a class="btn btn-default" href="features.html" role="button">Features »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="screenshots.html" role="button">Screenshots »</a></p>
         </div>
         <!-- Download -->
         <div class="col-md-4">
           <h2>Download</h2>
-          <p>ADAMS is written in Java and runs on any platform that supports Java 1.7. You can either download a <strong>release</strong> (usually considered stable) or a <strong>snapshot</strong> (if you want to get the latest updates).</p>
+          <p>Written in Java, ADAMS runs on any platform that supports <a href="http://www.oracle.com/technetwork/java/javase/" target="_blank">Java 1.7+</a>. Download, unzip and off you go! You can either download a <strong>release</strong> (usually considered stable) or a <strong>snapshot</strong> (if you want to get the latest updates).</p>
           <p><a class="btn btn-default" href="release.html" role="button">Release »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="snapshot.html" role="button">Snapshot »</a></p>
         </div>
         <!-- Get started -->
         <div class="col-md-4">
           <h2>Get started</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Any complex piece of software takes some time getting used to. But don't worry, there are lots of example flows that show you how to use all the actors. ADAMS is a big plugin-framework, making it easy for developers adding new components.</p>
           <p><a class="btn btn-default" href="user_start.html" role="button">User »</a><span style="padding: 5px; "></span><a class="btn btn-default" href="dev_start.html" role="button">Developer »</a></p>
         </div>
       </div>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer">
+      </div>
+      <script>$("#footer").load("footer.html");</script>
     </div> <!-- /container -->
 
 
