--- a/screenshots.html
+++ b/screenshots.html
@@ -130,8 +130,9 @@
         </a-->
       </div>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer">
+      </div>
+      <script>$("#footer").load("footer.html");</script>
     </div> <!-- /container -->
 
 
