--- a/user_forum.html
+++ b/user_forum.html
@@ -53,8 +53,9 @@
         + "&parenturl=" + encodeURIComponent(window.location.href);
       </script>
 
-      <span id="footerimport"></span>
-      <script>$("#footerimport").load("footer.html");</script>
+      <div id="footer-simple">
+      </div>
+      <script>$("#footer-simple").load("footer.html");</script>
     </div> <!-- /container -->
 
 
