--- a/user_examples.html
+++ b/user_examples.html
@@ -468,16 +468,32 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-1">
+                        Performs pixel area classification (background or object) with a WEKA classifier trained on regions selected by the user.
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-advanced-1" class="panel-collapse collapse">
                     <div class="panel-body">
                       <p></p>
-                      <img src="img/examples/"/>
+                      <img src="img/examples/pixel-selector.png"/>
                       <ol>
-                        <li></li>
+                        <li>Parameter initialization</li>
+                        <li>Loading and pre-processing of image, storing in internal storage for future retrieval</li>
+                        <li>Extract image height and store it in a variable</li>
+                        <li>Extract and store image width in variable as well</li>
+                        <li>Interacting with the user, choosing pixel regions used as traingin data</li>
+                        <li>Generate training data for WEKA classifier</li>
+                        <li>Keep track of number of training instances</li>
+                        <li>Cross-validate (and output results) on training data only if there are at least 10 instances in the data</li>
+                        <li>Train the classifier, stored model on disk for future use and in the internal storage as well for performing the classification task</li>
+                        <li>Outer loop for traversing X (every 3rd pixel)</li>
+                        <li>Inner loop for traversing Y (every 3rd pixel as well)</li>
+                        <li>Extract pixel region around current X and Y, turn into a WEKA instance and make prediction</li>
+                        <li>Choose the color for background or object classification</li>
+                        <li>Update the pixel at the current position</li>
+                        <li>Display the modified image</li>
                       </ol>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/cuop0RAG35w&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/cuop0RAG35w&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
                     </div>
                   </div>
                 </div>
@@ -485,16 +501,29 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-2">
+                        Using the GC-MS extension modules, this flow performs a check on the sample type of GC-MS spectra and can send the analyst an email with the results. The spectra themselves are obtained from fruit and vegetable samples.
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-advanced-2" class="panel-collapse collapse">
                     <div class="panel-body">
                       <p></p>
-                      <img src="img/examples/"/>
+                      <img src="img/examples/sampletypechecker.png"/>
                       <ol>
-                        <li></li>
+                        <li>Retrieve classification available classification labels</li>
+                        <li>List all chromatogram files</li>
+                        <li>Load and pre-process chromatograms one-by-one</li>
+                        <li>Show Total-ion-count and take a screenshot for report</li>
+                        <li>The same with the Baseline-ion-count</li>
+                        <li>Turn chromatogram into WEKA instance and predict the class label</li>
+                        <li>Determine the fruit/vegetable picture associated with the label</li>
+                        <li>Create a spreadsheet from the class distribution (top 5)</li>
+                        <li>Generate various output for the PDF report</li>
+                        <li>Generate PDF report</li>
                       </ol>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/UWS7cBerBT8&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/UWS7cBerBT8&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
+                      <p><strong>An application of data mining to fruit and vegetable sample identification using Gas Chromatography-Mass Spectrometry</strong></p>
+                      <p>Geoffrey Holmes, Dale Fletcher, and Peter Reutemann (2012). An application of data mining to fruit and vegetable sample identification using Gas Chromatography-Mass Spectrometry. Proceedings of the International Congress on Environmental Modelling and Software (IEMSS), Leizpig, Germany, 2012. [<a href="http://www.cms.waikato.ac.nz/~fracpete/publications/2012/iemss2012.pdf" target="_blank">pdf</a>]</p>
                     </div>
                   </div>
                 </div>
@@ -502,50 +531,28 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-3">
+                        Using GC-MS extension modules, this flow processes spectral data generating predictions for compounds. The user can correct the guessed peaks interactively, before the concentrations are calculated.
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-advanced-3" class="panel-collapse collapse">
                     <div class="panel-body">
                       <p></p>
-                      <img src="img/examples/"/>
+                      <img src="img/examples/spectralanalysis.png"/>
                       <ol>
-                        <li></li>
+                        <li>Set up external flows, relative to current one</li>
+                        <li>Set up variables for serialized regression model files</li>
+                        <li>Prompt user to select spectra</li>
+                        <li>Determine extension of currently processed spectrum</li>
+                        <li>Prompt user to enter additional parameters</li>
+                        <li>Load file, executing subflow depending on file extensions</li>
+                        <li>Guess type of compound based on filename and prompt with pre-selected choice</li>
+                        <li>Process spectrum, guessing peaks using external flow</li>
+                        <li>Prompt user to inspect selected peaks, allow user to correct them</li>
+                        <li>Turn spectrum into WEKA data structure and make prediction on peak area for all compounds</li>
+                        <li>Assemble predictions, display them and copy them to the clipboard as well before proceeding with the next data file</li>
                       </ol>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-4">
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapse-advanced-4" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      <p></p>
-                      <img src="img/examples/"/>
-                      <ol>
-                        <li></li>
-                      </ol>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion-advanced" href="#collapse-advanced-5">
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapse-advanced-5" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      <p></p>
-                      <img src="img/examples/"/>
-                      <ol>
-                        <li></li>
-                      </ol>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/P6KceexcfZo&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/P6KceexcfZo&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
                     </div>
                   </div>
                 </div>
