added more examples

--- a/user_examples.html
+++ b/user_examples.html
@@ -576,13 +576,14 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-others" href="#collapse-others-1">
+                        WEKA webservice
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-others-1" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
-                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
+                      <p>Using this webservice, any programming language can take advantage of WEKA as long as it supports SOAP</p>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/90zhhvfzkWI&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/90zhhvfzkWI&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
                     </div>
                   </div>
                 </div>
@@ -590,13 +591,14 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-others" href="#collapse-others-2">
+                        Processing data with R
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-others-2" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
-                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
+                      <p>Shows how to utilize <a href="http://www.r-project.org/" target="_blank">R</a> from within ADAMS</p>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/E9m1So70fco&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/E9m1So70fco&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
                     </div>
                   </div>
                 </div>
@@ -604,13 +606,14 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-others" href="#collapse-others-3">
+                        Classifier evaluation: from simple to complex 
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-others-3" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
-                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
+                      <p>Demonstrates how a flow can evolve from simple to complex</p>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/bZ85knCw30s&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/bZ85knCw30s&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
                     </div>
                   </div>
                 </div>
@@ -618,27 +621,14 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       <a data-toggle="collapse" data-parent="#accordion-others" href="#collapse-others-4">
+                        Flow execution listeners
                       </a>
                     </h4>
                   </div>
                   <div id="collapse-others-4" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p></p>
-                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion-others" href="#collapse-others-5">
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapse-others-5" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      <p></p>
-                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/***&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
+                      <p>With these listeners you can <em>eavesdrop</em> on your flow, check out for instance where most of the CPU time is used or how often actors are executed</p>
+                      <object width="560" height="446"><param name="movie" value="http://www.youtube.com/v/PpEEdn_vcOs&hl=en&fs=1&showinfo=0"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/PpEEdn_vcOs&hl=en&fs=1&showinfo=0" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="446"></embed></object>
                     </div>
                   </div>
                 </div>
